Backport 1.19.3 tick-loop